--- a/index.html
+++ b/index.html
@@ -26,28 +26,9 @@
 				<button onclick=" init()" class="mt-4 block w-full"
 					style="font-size: 22px;font-weight: bolder;font-family: poppins;outline: 2px solid rgba(120,207,255,0.5);background: #000;color: #fff;cursor: pointer;width: auto;border-radius: 50px;padding: 7px 10px;position: absolute;bottom: 100px;">
 					❤️ Click Me Princess ❤️</button>
-				<!-- <button onclick="initFast()" class="mt-2 block w-full">&gt; Blessings &lt;</button> -->
 			</div>
 		</div>
 	</div>
-	<!-- <div id="comments" style="display:none; top:-100vh;">
-		<div class="comments-box prose relative">
-			<h2 class="mt-4">生日祝福</h2>
-			<button onclick="hideComments()" class="absolute top-5 right-5 opacity-60">
-				<svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewBox="0 0 20 20" fill="#000">
-					<path fill-rule="evenodd"
-						d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-						clip-rule="evenodd" />
-				</svg>
-			</button>
-			<script src="https://giscus.app/client.js" data-repo="liyanqwq/chis-18yo" data-repo-id="R_kgDOHJ7aEg"
-				data-category="Announcements" data-category-id="DIC_kwDOHJ7aEs4COgos" data-mapping="pathname"
-				data-reactions-enabled="1" data-emit-metadata="0" data-input-position="bottom" data-theme="light"
-				data-lang="zh-CN" crossorigin="anonymous" async>
-				</script>
-
-		</div>
-	</div> -->
 	<div id="app">
 		<div class="w-screen h-screen flex justify-center items-center">
 			<div id="words" class="container mx-auto prose lg:prose-xl text-white rounded-xl px-8 py-6 overflow-y-auto"
@@ -163,7 +144,7 @@
 				setTimeout(() => {
 					$("#words").show(0, function () {
 						$("#words").animate({
-							'max-height': '96vh'
+							'max-height': '95%'
 						}, 2400, function () {
 							resolve('done');
 						});
