--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 					forward to many more months, years, and decades of love, laughter, and togetherness with you. Happy
 					30 months, my love!
 				</p>
-				<p class="text-right" style="margin-top: 0 !important;">Forever yours,</p>
-				<p class="text-right" style="margin-top: 0 !important;margin-bottom: 0 !important;">Duffer 🐼</p>
-				<p class="text-right">1.Sep.2023</p>
+				<p class="text-right">Forever yours,</p>
+				<p class="text-right">Duffer 🐼</p>
+				<p class="text-right" style="margin-top: -10px !important;">1.Sep.2023</p>
 				<!-- <p class="mt-2">
 					<button onclick="loadComments()" style="font-size: 1rem; font-weight: semibold;">&gt; 点击查看朋友们的祝福
 						&lt;</button>
@@ -145,7 +145,7 @@
 				setTimeout(() => {
 					$("#words").show(0, function () {
 						$("#words").animate({
-							'max-height': '90%'
+							'max-height': 'auto'
 						}, 2400, function () {
 							resolve('done');
 						});
