--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<div class="absolute left-0 w-screen flex justify-center items-center" id="copyright"
 					style="bottom: -150px;">
 					<div class="mb-8 opacity-100 text-white" style="font-size: 20px;font-family: poppins;position: absolute;
-					bottom: 30px;">
+					bottom: 40px;">
 						Made With ❤️ By Duffer<br />
 					</div>
 				</div>
@@ -145,7 +145,7 @@
 				setTimeout(() => {
 					$("#words").show(0, function () {
 						$("#words").animate({
-							'max-height': 'auto'
+							'max-height': '95vh'
 						}, 2400, function () {
 							resolve('done');
 						});
