--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 				</p>
 				<p class="text-right">Forever yours,</p>
 				<p class="text-right">Duffer 🐼</p>
-				<p class="text-right" style="margin-top: -10px !important;">1.Sep.2023</p>
+				<p class="text-right" style="margin-top: -10px !important;line-height: 1;margin-bottom: 20px;">
+					1.Sep.2023</p>
 				<!-- <p class="mt-2">
 					<button onclick="loadComments()" style="font-size: 1rem; font-weight: semibold;">&gt; 点击查看朋友们的祝福
 						&lt;</button>
