--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 					forward to many more months, years, and decades of love, laughter, and togetherness with you. Happy
 					30 months, my love!
 				</p>
-				<p class="text-right">Forever yours,</p>
-				<p class="text-right">Duffer 🐼</p>
+				<p class="text-right" style="line-height: 1;">Forever yours,</p>
+				<p class="text-right" style="line-height: 1;">Duffer 🐼</p>
 				<p class="text-right" style="margin-top: -10px !important;line-height: 1;margin-bottom: 20px;">
 					1.Sep.2023</p>
 				<!-- <p class="mt-2">
