--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				</p>
 				<p class="text-right" style="line-height: 1;">Forever yours,</p>
 				<p class="text-right" style="line-height: 1;">Duffer 🐼</p>
-				<p class="text-right" style="margin-top: -10px !important;line-height: 1;margin-bottom: 20px;">
+				<p class="text-right" style="margin-top: -10px !important;line-height: 1.3;">
 					1.Sep.2023</p>
 				<!-- <p class="mt-2">
 					<button onclick="loadComments()" style="font-size: 1rem; font-weight: semibold;">&gt; 点击查看朋友们的祝福
